Documentation and README update

--- a/docs/source/data-guide.ipynb
+++ b/docs/source/data-guide.ipynb
@@ -11,10 +11,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "600ee6e5-5aa5-40b7-97b3-2645b91a4e2a",
    "metadata": {},
    "source": [
+    "(data-guide)=\n",
     "# WeatherBench 2 Data Guide\n",
     "\n",
     "One core part of WeatherBench 2 are ready-to-use, cloud-based datasets. This page lists and describes all the available datasets.\n",
@@ -4096,6 +4098,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8ead4f44-d62b-4712-9057-bee2b1d589cb",
    "metadata": {},
@@ -8915,6 +8918,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4bd47ee8-44ca-4315-ad48-b6eecb6cc139",
    "metadata": {},
@@ -11062,6 +11066,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b0fc6e03-9d0e-4cb3-bd1b-4b8de5876e5c",
    "metadata": {},
@@ -14339,6 +14344,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "208e4661-caf9-440d-9f95-38ad4b8afe41",
    "metadata": {},
@@ -17804,6 +17810,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "227bfb7b-4dce-419b-a53b-1b55866c67c7",
    "metadata": {},
@@ -20752,6 +20759,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "861126df-edc3-4899-bbd7-b808bd3e6717",
    "metadata": {},
@@ -23265,6 +23273,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b294d36c-66b5-4515-b226-27007539495c",
    "metadata": {},
@@ -24521,10 +24530,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "df3113b5-908a-495f-951d-52c953278ade",
    "metadata": {},
    "source": [
+    "(pangu)=\n",
     "### Pangu-Weather\n",
     "\n",
     "The [Pangu](https://www.nature.com/articles/s41586-023-06185-3) authors also kindly provided us with forecasts for the year 2020\n",
