--- a/docs/source/evaluation.ipynb
+++ b/docs/source/evaluation.ipynb
@@ -1,10 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "db1a246a-0cfa-4baf-a7a3-ca5bc521c734",
    "metadata": {},
    "source": [
+    "(evaluation)=\n",
     "# WeatherBench 2 Evaluation Quickstart\n",
     "\n",
     "In this notebook, we will cover the basic functionality of the WeatherBench evaluation framework.\n",
@@ -26,6 +28,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "959f9b8f-00d2-405a-b07d-5593c3314e3f",
    "metadata": {},
@@ -48,6 +51,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8abcc6c7-1766-4a2a-a99f-bbd062500562",
    "metadata": {},
@@ -6661,6 +6665,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4ed2994f-bb1f-4e6c-8aa7-df7233b436dc",
    "metadata": {},
@@ -9784,6 +9789,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "034295ed-433f-4731-a932-37b423df1477",
    "metadata": {},
@@ -9804,6 +9810,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7ce91925-4c6b-4fd5-8ac0-b828e3eca417",
    "metadata": {},
@@ -9828,6 +9835,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "18e6ecd0-316e-4c1b-a349-06394ad4d229",
    "metadata": {},
@@ -9853,6 +9861,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d5286330-d0f4-4da9-8394-f8536790dd9c",
    "metadata": {},
@@ -9871,6 +9880,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c3309e72-db02-4eae-b84d-4bfb49b2fa31",
    "metadata": {},
@@ -9902,6 +9912,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "da6e221c-7a40-40d5-bdc5-73ab7021b120",
    "metadata": {},
@@ -9936,6 +9947,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f46a917d-6b99-491b-87da-53a3d567e0c8",
    "metadata": {},
@@ -9966,6 +9978,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dee5ea2e-7909-4730-90d5-fb1a227e14cd",
    "metadata": {},
@@ -9989,6 +10002,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "50117845-6c07-4012-9318-08932bc5fc9f",
    "metadata": {},
@@ -9997,6 +10011,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a15ffd6-8d02-47ef-8812-a18693827cc8",
    "metadata": {},
@@ -10456,6 +10471,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4ddb45e4-9ac1-427c-8290-35f2d5e6a7dc",
    "metadata": {},
