Update to documentation

--- a/docs/source/data-guide.ipynb
+++ b/docs/source/data-guide.ipynb
@@ -16,12 +16,12 @@
    "id": "600ee6e5-5aa5-40b7-97b3-2645b91a4e2a",
    "metadata": {},
    "source": [
-    "(data-guide)=\n",
+    "<!-- (data-guide)= -->\n",
     "# WeatherBench 2 Data Guide\n",
     "\n",
     "One core part of WeatherBench 2 are ready-to-use, cloud-based datasets. This page lists and describes all the available datasets.\n",
     "\n",
-    "The datasets are stored in this public Google Cloud bucket: `gs://weatherbench2/datasets`\n",
+    "The datasets are stored in this public Google Cloud bucket: [`gs://weatherbench2/datasets`](https://console.cloud.google.com/storage/browser/weatherbench2)\n",
     "\n",
     "### A note on resolutions\n",
     "\n",
@@ -35,7 +35,7 @@
     "\n",
     "Our ERA5 datasets were downloaded from the [Copernicus Climate Data Store](https://cds.climate.copernicus.eu/) and have a time range from 1959 to 2022 (incl.). The data here has been downsampled to 6h and 13 levels, even though a raw hourly dataset with 37 levels is also available at `gs://weatherbench2/datasets/era5/1959-2022-full_37-1h-0p25deg-chunk-1.zarr-v2`\n",
     "\n",
-    "Location: `gs://weatherbench2/datasets/era5/`\n",
+    "Location: [`gs://weatherbench2/datasets/era5/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/era5/)\n",
     "\n",
     "Files:\n",
     "* `1959-2022-6h-1440x721.zarr`\n",
@@ -44,7 +44,7 @@
     "* `1959-2022-6h-128x64_equiangular_with_poles_conservative.zarr`\n",
     "* `1959-2022-6h-64x32_equiangular_with_poles_conservative.zarr`\n",
     "\n",
-    "See output below for a list of variables. Wind speed was derived using [LINK]."
+    "See output below for a list of variables. Wind speed was derived using [this method](https://weatherbench2.readthedocs.io/en/latest/_autosummary/weatherbench2.derived_variables.WindSpeed.html#weatherbench2.derived_variables.WindSpeed)."
    ]
   },
   {
@@ -4107,7 +4107,7 @@
     "\n",
     "A climatology is used for e.g. computing anomaly metrics such as the ACC. For WeatherBench 2, the climatology was computed using a running window for smoothing (see paper and script) for each day of year and sixth hour of day. We have computed climatologies for 1990-2017 and 1990-2019.\n",
     "\n",
-    "Location: `gs://weatherbench2/datasets/era5-hourly-climatology/`\n",
+    "Location: [`gs://weatherbench2/datasets/era5-hourly-climatology/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/era5-hourly-climatology/)\n",
     "\n",
     "Files:\n",
     "* `1990-2017_6h_1440x721.zarr`\n",
@@ -8927,7 +8927,7 @@
     "\n",
     "To evaluate IFS forecasts, we use the IFS analysis as the ground truth. Note that here we use the initial conditions of the HRES forecasts, i.e. the forecasts at lead time zero as analysis. This is not exactly the same as the analysis dataset provided by ECMWF (see paper for details). \n",
     "\n",
-    "Location: `gs://weatherbench2/datasets/hres_t0/`\n",
+    "Location: [`gs://weatherbench2/datasets/hres_t0/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/hres_t0/)\n",
     "\n",
     "Files:\n",
     "* `2016-2022-6h-1440x721.zarr`\n",
@@ -11077,7 +11077,7 @@
     "\n",
     "Here, we provide the 00 and 12 UTC initializations of HRES.\n",
     "\n",
-    "Location: `gs://weatherbench2/datasets/hres/`\n",
+    "Location: [`gs://weatherbench2/datasets/hres/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/hres/)\n",
     "\n",
     "Files:\n",
     "* `2016-2022-0012-1440x721.zarr`\n",
@@ -14353,7 +14353,7 @@
     "\n",
     "Downloading the full ensemble takes a very long time. We downloaded ensemble data from the [TIGGE archive](https://apps.ecmwf.int/datasets/data/tigge/levtype=sfc/type=cf/) for 2018 and 2020. More years are still being downloaded.\n",
     "\n",
-    "Location: `gs://weatherbench2/datasets/ens/`\n",
+    "Location: [`gs://weatherbench2/datasets/ens/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/ens/)\n",
     "\n",
     "Files:\n",
     "* `2018-1440x721.zarr`\n",
@@ -17819,7 +17819,7 @@
     "\n",
     "We also compute the ensemble mean and save it as a separate file, e.g. to use it as a deterministic baseline.\n",
     "\n",
-    "Location: `gs://weatherbench2/datasets/ens/`\n",
+    "Location: [`gs://weatherbench2/datasets/ens/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/ens/)\n",
     "\n",
     "Files:\n",
     "* `2018-1440x721_mean.zarr`\n",
@@ -20768,7 +20768,7 @@
     "\n",
     "As an apples-to-apples baseline for ML forecasts trained and evaluated with ERA5, we downloaded the ERA5 forecasts, a set of experimental forecasts run by ECMWF using the ERA5 IFS version, starting from ERA5 initial conditions.\n",
     "\n",
-    "Location: `gs://weatherbench2/datasets/era5-forecasts/`\n",
+    "Location: [`gs://weatherbench2/datasets/era5-forecasts/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/era5-forecast/)\n",
     "\n",
     "Files:\n",
     "* `2020-1440x721.zarr`\n",
@@ -23282,7 +23282,7 @@
     "\n",
     "Ryan Keisler provided us with forecast using the Graph Neural Network from his [2022 paper](https://arxiv.org/abs/2202.07575).\n",
     "\n",
-    "Location: `gs://weatherbench2/datasets/keisler/`\n",
+    "Location: [`gs://weatherbench2/datasets/keisler/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/keisler/)\n",
     "\n",
     "Files:\n",
     "* `2020-360x181.zarr`\n",
@@ -24535,12 +24535,12 @@
    "id": "df3113b5-908a-495f-951d-52c953278ade",
    "metadata": {},
    "source": [
-    "(pangu)=\n",
+    "<!-- (pangu)= -->\n",
     "### Pangu-Weather\n",
     "\n",
     "The [Pangu](https://www.nature.com/articles/s41586-023-06185-3) authors also kindly provided us with forecasts for the year 2020\n",
     "\n",
-    "Location: `gs://weatherbench2/datasets/pangu/`\n",
+    "Location: [`gs://weatherbench2/datasets/pangu/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/pangu/)\n",
     "\n",
     "Files:\n",
     "* `2020-1440x721_raw.zarr`\n",
