--- a/docs/source/evaluation.ipynb
+++ b/docs/source/evaluation.ipynb
@@ -6,7 +6,7 @@
    "id": "db1a246a-0cfa-4baf-a7a3-ca5bc521c734",
    "metadata": {},
    "source": [
-    "(evaluation)=\n",
+    "<!-- (evaluation)= -->\n",
     "# WeatherBench 2 Evaluation Quickstart\n",
     "\n",
     "In this notebook, we will cover the basic functionality of the WeatherBench evaluation framework.\n",
@@ -9983,7 +9983,7 @@
    "id": "dee5ea2e-7909-4730-90d5-fb1a227e14cd",
    "metadata": {},
    "source": [
-    "For the Beam version, evaluation is split across chunks. The chunk sizes can be specified alongside the Beam runner. For more detail on running Beam in a distributed fashion on the cloud, see [LINK]."
+    "For the Beam version, evaluation is split across chunks. The chunk sizes can be specified alongside the Beam runner. For more detail on running Beam in a distributed fashion on the cloud, see [this guide](https://weatherbench2.readthedocs.io/en/latest/beam-in-the-cloud.html)."
    ]
   },
   {
@@ -9993,12 +9993,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluation.evaluate_with_beam(\n",
-    "    data_config,\n",
-    "    eval_configs,\n",
-    "    runner='DirectRunner',\n",
-    "    input_chunks={'time': 20},\n",
-    ")"
+    "# evaluation.evaluate_with_beam(\n",
+    "#     data_config,\n",
+    "#     eval_configs,\n",
+    "#     runner='DirectRunner',\n",
+    "#     input_chunks={'time': 20},\n",
+    "# )"
    ]
   },
   {
@@ -10480,16 +10480,8 @@
     "\n",
     "This quickstart guide shows the basic functionality of the WeatherBench evaluation code but there is more to explore. \n",
     "\n",
-    "TODO"
+    "For running evaluation from the command line, see [this guide](https://weatherbench2.readthedocs.io/en/latest/command-line-scripts.html). For a complete overview of the entire evaluation workflow, check out the [\"submission\" guide](https://weatherbench2.readthedocs.io/en/latest/submit.html)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff6ddb61-0654-4883-b3c9-356af8c8418f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -10508,7 +10500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
