Added colab links

--- a/docs/source/evaluation.ipynb
+++ b/docs/source/evaluation.ipynb
@@ -6670,7 +6670,7 @@
    "id": "4ed2994f-bb1f-4e6c-8aa7-df7233b436dc",
    "metadata": {},
    "source": [
-    "Some metrics like the ACC also require a climatology file. See [LINK] for how this is computed."
+    "Some metrics like the ACC also require a climatology file. Refer to the paper for details on how this is computed."
    ]
   },
   {
