Added colab link in notebook

--- a/docs/source/evaluation.ipynb
+++ b/docs/source/evaluation.ipynb
@@ -9,6 +9,10 @@
     "<!-- (evaluation)= -->\n",
     "# WeatherBench 2 Evaluation Quickstart\n",
     "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/drive/1qYH5VuMa7OWRHtEkdVya3u5gmCjcPDeX?usp=sharing\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "In this notebook, we will cover the basic functionality of the WeatherBench evaluation framework.\n",
     "\n",
     "The WeatherBench evaluation framework takes two datasets for forecast and ground truth (called obs, even though reanalysis datasets like ERA5 are not observations), computes and saves the specified metrics.\n",
