Small fixes in documentation. Added regridding script

--- a/docs/source/data-guide.ipynb
+++ b/docs/source/data-guide.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "One core part of WeatherBench 2 are ready-to-use, cloud-based datasets. This page lists and describes all the available datasets.\n",
     "\n",
-    "The datasets are stored in this public Google Cloud bucket: [`gs://weatherbench2/datasets`](https://console.cloud.google.com/storage/browser/weatherbench2)\n",
+    "The datasets are stored in this public Google Cloud bucket: [`gs://weatherbench2/datasets`](https://console.cloud.google.com/storage/browser/weatherbench2). Please also check the LICENSE files for each dataset in the respective GCS buckets.\n",
     "\n",
     "### A note on resolutions\n",
     "\n",
