A few notes on restricted licenses.

--- a/docs/source/data-guide.ipynb
+++ b/docs/source/data-guide.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "One core part of WeatherBench 2 are ready-to-use, cloud-based datasets. This page lists and describes all the available datasets.\n",
     "\n",
-    "The datasets are stored in this public Google Cloud bucket: [`gs://weatherbench2/datasets`](https://console.cloud.google.com/storage/browser/weatherbench2). Please also check the LICENSE files for each dataset in the respective GCS buckets.\n",
+    "The datasets are stored in this public Google Cloud bucket: [`gs://weatherbench2/datasets`](https://console.cloud.google.com/storage/browser/weatherbench2). **Please also check the LICENSE files for each dataset in the respective GCS buckets.** Some datasets allow commercial use. Others only permit research use.\n",
     "\n",
     "### A note on resolutions\n",
     "\n",
@@ -14352,6 +14352,8 @@
     "### IFS ENS\n",
     "\n",
     "Downloading the full ensemble takes a very long time. We downloaded ensemble data from the [TIGGE archive](https://apps.ecmwf.int/datasets/data/tigge/levtype=sfc/type=cf/) for 2018 and 2020. More years are still being downloaded.\n",
+    "\n",
+    "All data from the TIGGE archive can only be used for research purposes. Please check the license for more specific constraints.\n",
     "\n",
     "Location: [`gs://weatherbench2/datasets/ens/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/ens/)\n",
     "\n",
