--- a/docs/source/evaluation.ipynb
+++ b/docs/source/evaluation.ipynb
@@ -9810,7 +9810,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weatherbench2.config import Selection, Paths, DataConfig, EvalConfig"
+    "from weatherbench2.config import Selection, Paths, DataConfig, Eval"
    ]
   },
   {
@@ -9891,7 +9891,7 @@
    "source": [
     "#### Evaluation configuration\n",
     "\n",
-    "Next, we can defined which evaluation we want to run. To do so, we can define a dictionary of EvalConfigs, each of which will be evaluated separately and saved to a different file. EvalConfig instances contain the metrics objects, defined in metrics.py. \n",
+    "Next, we can defined which evaluation we want to run. To do so, we can define a dictionary of `config.Eval`s, each of which will be evaluated separately and saved to a different file. Eval instances contain the metrics objects, defined in metrics.py.\n",
     "\n",
     "Note that for ACC, we additionally need to pass the climatology opened earlier."
    ]
@@ -9906,7 +9906,7 @@
     "from weatherbench2.metrics import RMSE, ACC\n",
     "\n",
     "eval_configs = {\n",
-    "  'deterministic': EvalConfig(\n",
+    "  'deterministic': Eval(\n",
     "      metrics={\n",
     "          'rmse': RMSE(), \n",
     "          'acc': ACC(climatology=climatology) \n",
@@ -9940,7 +9940,7 @@
     "}\n",
     "\n",
     "eval_configs = {\n",
-    "  'deterministic': EvalConfig(\n",
+    "  'deterministic': Eval(\n",
     "      metrics={\n",
     "          'rmse': RMSE(), \n",
     "          'acc': ACC(climatology=climatology) \n",
