--- a/docs/source/evaluation.ipynb
+++ b/docs/source/evaluation.ipynb
@@ -9810,7 +9810,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weatherbench2.config import Selection, Paths, DataConfig, Eval"
+    "from weatherbench2.config import Selection, Paths, Data, Eval"
    ]
   },
   {
@@ -9870,7 +9870,7 @@
    "id": "d5286330-d0f4-4da9-8394-f8536790dd9c",
    "metadata": {},
    "source": [
-    "Together they make up the DataConfig:"
+    "Together they make up the Data config:"
    ]
   },
   {
@@ -9880,7 +9880,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_config = DataConfig(selection=selection, paths=paths)"
+    "data_config = Data(selection=selection, paths=paths)"
    ]
   },
   {
