Updating example notebook of how to import and refer to config classes.

--- a/docs/source/evaluation.ipynb
+++ b/docs/source/evaluation.ipynb
@@ -9810,7 +9810,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weatherbench2.config import Selection, Paths, Data, Eval"
+    "from weatherbench2 import config"
    ]
   },
   {
@@ -9831,7 +9831,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = Paths(\n",
+    "paths = config.Paths(\n",
     "    forecast=forecast_path,\n",
     "    obs=obs_path,\n",
     "    output_dir='./',   # Directory to save evaluation results\n",
@@ -9854,7 +9854,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selection = Selection(\n",
+    "selection = config.Selection(\n",
     "    variables=[\n",
     "        'geopotential',\n",
     "        '2m_temperature'\n",
@@ -9880,7 +9880,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_config = Data(selection=selection, paths=paths)"
+    "data_config = config.Data(selection=selection, paths=paths)"
    ]
   },
   {
@@ -9906,7 +9906,7 @@
     "from weatherbench2.metrics import RMSE, ACC\n",
     "\n",
     "eval_configs = {\n",
-    "  'deterministic': Eval(\n",
+    "  'deterministic': config.Eval(\n",
     "      metrics={\n",
     "          'rmse': RMSE(), \n",
     "          'acc': ACC(climatology=climatology) \n",
@@ -9940,7 +9940,7 @@
     "}\n",
     "\n",
     "eval_configs = {\n",
-    "  'deterministic': Eval(\n",
+    "  'deterministic': config.Eval(\n",
     "      metrics={\n",
     "          'rmse': RMSE(), \n",
     "          'acc': ACC(climatology=climatology) \n",
