Small fixes; Open in colab now points to GitHub version of notebook.

--- a/docs/source/data-guide.ipynb
+++ b/docs/source/data-guide.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "### A note on resolutions\n",
     "\n",
-    "We provide the datasets are different resolutions. All files will have the number of longitude X latitude grid points in their filename, e.g. `64x32`. For the WeatherBench 2 paper, all evaluation was done at `240x121` = 1.5 degree resolution. Regridding was done conservatively. \n",
+    "We provide the datasets at different resolutions. All files will have the number of longitude X latitude grid points in their filename, e.g. `64x32`. For the WeatherBench 2 paper, all evaluation was done at `240x121` = 1.5 degree resolution. All datasets were regridded using first-order conservative regridding, i.e., with weights proportional to the area of overlap between grid cells on the original and desired grids.\n",
     "\n",
     "The ERA5 resolution files (`1440x721` = 0.25 degrees) contain the poles, i.e. -90 and 90 degree latitude. Most regridded files also do, denoted with `with_poles`. The `512x256` files do not contain the pole grid points.\n",
     "\n",
@@ -33,7 +33,7 @@
     "\n",
     "### ERA5 \n",
     "\n",
-    "Our ERA5 datasets were downloaded from the [Copernicus Climate Data Store](https://cds.climate.copernicus.eu/) and have a time range from 1959 to 2022 (incl.). The data here has been downsampled to 6h and 13 levels, even though a raw hourly dataset with 37 levels is also available at `gs://weatherbench2/datasets/era5/1959-2022-full_37-1h-0p25deg-chunk-1.zarr-v2`\n",
+    "Our ERA5 datasets were downloaded from the [Copernicus Climate Data Store](https://cds.climate.copernicus.eu/) and have a time range from 1959 to 2022 (incl.). The data here have been downsampled to 6h and 13 levels, even though a raw hourly dataset with 37 levels is also available at `gs://weatherbench2/datasets/era5/1959-2022-full_37-1h-0p25deg-chunk-1.zarr-v2`\n",
     "\n",
     "Location: [`gs://weatherbench2/datasets/era5/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/era5/)\n",
     "\n",
@@ -26275,7 +26275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
