--- a/docs/source/data-guide.ipynb
+++ b/docs/source/data-guide.ipynb
@@ -49738,7 +49738,7 @@
     "\n",
     "### MADIS METAR\n",
     "\n",
-    "MADIS](https://madis.ncep.noaa.gov/index.shtml) is a NOAA operated database that provides access to several meteorological datasets. [METAR](https://madis.ncep.noaa.gov/madis_metar.shtml) is a dataset of weather station observations. The raw data comes in NetCDF format and has been downloaded from the [MADIS ftp server](https://madis.ncep.noaa.gov/mesonet_providers.shtml). The data has been converted to [Parquet](https://parquet.apache.org/docs/) format in different chunking formats.\n",
+    "[MADIS](https://madis.ncep.noaa.gov/index.shtml) is a NOAA operated database that provides access to several meteorological datasets. [METAR](https://madis.ncep.noaa.gov/madis_metar.shtml) is a dataset of weather station observations. The raw data comes in NetCDF format and has been downloaded from the [MADIS ftp server](https://madis.ncep.noaa.gov/mesonet_providers.shtml). The data has been converted to [Parquet](https://parquet.apache.org/docs/) format in different chunking formats.\n",
     "\n",
     "Location: [`gs://weatherbench2/datasets/metar/`](https://console.cloud.google.com/storage/browser/weatherbench2/datasets/metar/)\n",
     "\n",
@@ -50024,7 +50024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
